feat: show installment items in monthly cashflows and picuinhas view
